add connectors and websearch tool