@@ -1,14 +1,12 @@
-package com.agentengine.engine.api.utils;
+package com.agentengine.util;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.google.adk.JsonBaseModel;
 import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.JsonPath;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -16,12 +14,17 @@ import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Map;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public final class JsonUtils {
   private static final Logger LOGGER = LoggerFactory.getLogger(JsonUtils.class);
-  private static final ObjectMapper STABLE_MAPPER =
+  private static final ObjectMapper JSON_MAPPER =
       JsonBaseModel.getMapper()
           .copy()
+          .configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, true);
+  private static final ObjectMapper YAML_MAPPER =
+      new ObjectMapper(new YAMLFactory())
           .configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, true);
 
   private JsonUtils() {}
@@ -30,7 +33,7 @@ public final class JsonUtils {
     if (map == null) {
       return null;
     }
-    return STABLE_MAPPER.convertValue(map, clazz);
+    return JSON_MAPPER.convertValue(map, clazz);
   }
 
   public static <T> T fromJson(final String json, final Class<T> clazz) {
@@ -38,7 +41,18 @@ public final class JsonUtils {
       return null;
     }
     try {
-      return STABLE_MAPPER.readValue(json, clazz);
+      return JSON_MAPPER.readValue(json, clazz);
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  public static <T> T fromYaml(final String yaml, final Class<T> clazz) {
+    if (yaml == null || yaml.isBlank()) {
+      return null;
+    }
+    try {
+      return YAML_MAPPER.readValue(yaml, clazz);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -49,7 +63,7 @@ public final class JsonUtils {
       return null;
     }
     try {
-      return STABLE_MAPPER.readValue(json, STABLE_MAPPER.getTypeFactory().constructType(type));
+      return JSON_MAPPER.readValue(json, JSON_MAPPER.getTypeFactory().constructType(type));
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -60,7 +74,7 @@ public final class JsonUtils {
       return null;
     }
     try {
-      return STABLE_MAPPER.readValue(inputStream, clazz);
+      return JSON_MAPPER.readValue(inputStream, clazz);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -71,7 +85,7 @@ public final class JsonUtils {
       return null;
     }
     try {
-      return STABLE_MAPPER.readValue(json, typeReference);
+      return JSON_MAPPER.readValue(json, typeReference);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -82,7 +96,7 @@ public final class JsonUtils {
       return null;
     }
     try {
-      return STABLE_MAPPER.readValue(is, new TypeReference<Map<String, Object>>() {});
+      return JSON_MAPPER.readValue(is, new TypeReference<Map<String, Object>>() {});
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -92,7 +106,7 @@ public final class JsonUtils {
     if (obj == null) {
       return null;
     }
-    return STABLE_MAPPER.convertValue(obj, new TypeReference<Map<String, Object>>() {});
+    return JSON_MAPPER.convertValue(obj, new TypeReference<Map<String, Object>>() {});
   }
 
   public static Map<String, Object> toJacksonMap(final Object obj) {
@@ -105,7 +119,7 @@ public final class JsonUtils {
 
   public static <T> T fromFile(final Path path, final Class<T> clazz) {
     try (InputStream stream = Files.newInputStream(path)) {
-      return STABLE_MAPPER.readValue(stream, clazz);
+      return JSON_MAPPER.readValue(stream, clazz);
     } catch (IOException ex) {
       throw new RuntimeException(ex);
     }
@@ -113,7 +127,7 @@ public final class JsonUtils {
 
   public static <T> T fromFile(final Path path, final TypeReference<T> typeReference) {
     try (InputStream stream = Files.newInputStream(path)) {
-      return STABLE_MAPPER.readValue(stream, typeReference);
+      return JSON_MAPPER.readValue(stream, typeReference);
     } catch (IOException ex) {
       throw new RuntimeException(ex);
     }
@@ -121,35 +135,31 @@ public final class JsonUtils {
 
   public static String toJson(final Object value) {
     try {
-      return STABLE_MAPPER.writeValueAsString(value);
+      return JSON_MAPPER.writeValueAsString(value);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
   }
 
-  public static void toStream(OutputStream os, Object value) throws IOException {
-    STABLE_MAPPER.writeValue(os, value);
+  public static void toStream(final OutputStream os, final Object value) throws IOException {
+    JSON_MAPPER.writeValue(os, value);
   }
 
   public static String toStableJson(final Object value) {
-    try {
-      return STABLE_MAPPER.writeValueAsString(value);
-    } catch (IOException e) {
-      throw new RuntimeException(e);
-    }
+    return toJson(value);
   }
 
-  public static void removeValue(Object jsonObject, String path) {
+  public static void removeValue(final Object jsonObject, final String path) {
     JsonPath.using(Configuration.builder().build()).parse(jsonObject).delete(path);
   }
 
   public static Map<String, Object> parseJsonPayload(final String text) {
-    if (StringUtils.isBlank(text)) {
+    if (text == null || text.isBlank()) {
       return null;
     }
     String cleaned = text.trim();
     if (cleaned.startsWith("```")) {
-      int end = cleaned.lastIndexOf("```");
+      final int end = cleaned.lastIndexOf("```");
       if (end > 2) {
         cleaned = cleaned.substring(3, end).trim();
         if (cleaned.startsWith("json")) {
